infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway-srv
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-srv
                port:
                  number: 3000
